2008-12-06  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSSavePanel.m (-_reloadBrowser:, -setRequiredFileType:,
	-setAllowedFileTypes:, -setTreatsFilePackagesAsDirectories:):
	* Source/NSOpenPanel.m (-_setupForTypes:, -setCanChooseFiles:)
	-runModal..., -beginSheet...): Update the panels' browser when the
	list of visible file extensions is changed programmatically.

2008-12-06  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Headers/AppKit/NSSavePanel.h:
	* Source/NSSavePanel.m (-requiredFileType, -setRequiredFileType:,
	-allowedFileTypes, -setAllowedFileTypes:, -filename, -_resetDefaults,
	-_shouldShowExtension:isDir:):
	* Source/NSDocument.m (-changeSaveType:,
	-fileNameFromRunningSavePanelForSaveOperation:): Implement support
	for document types with multiple allowed file extensions.

	* Source/NSDocument.m (-writeWithBackuptoFile:ofType:saveOperation:):
	Bug fix: Do not modify the file name argument.

2008-12-06  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSSavePanel.m (-ok, -cancel:, -_setDefaultDirectory:,
	-_updateDefaultDirectory:, -_setupForDirectory:file:):
	* Source/NSOpenPanel.m (-ok:):
	* Source/NSDocumentController.m (-currentDirectory)
	(-reviewUnsavedDocumentsWithAlertTitle:cancelable:): Make open and
	save panels consistently start up in the last used directory by
	default.

2008-12-06  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Headers/AppKit/NSDocument.h:
	* Source/NSDocument.m (-isDocumentEdited, updateChangeCount:,
	hasUnautosavedChanges, changeWasDone): Fix bug where a document
	would appear unmodified after saving the document, undoing a
	number of changes, and then making an equal number of changes.

	* Source/NSDocument.m (-revertDocumentToSaved:): Reset the undo
	manager after reverting a document.

2008-12-06  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSDocument.m (-undo:, -redo:, -validateMenuItem:): Move
	implementation from here ...
	* Source/NSWindow.m (-undo:, -redo:, -validateMenuItem:): ... to